# LostInADream

./: .gitignore  CMakeLists.txt  Makefile
res/: background.txt  bullet.txt  chair.txt  meteoroid.txt  meteoroid_2x_title.txt  meteoroid_background.txt  meteoroid_bullet.txt  meteoroid_exit_button.txt  meteoroid_game_automaton.txt  meteoroid_new_game_button.txt  meteoroid_player.txt  meteoroid_records_game_over_title.txt  meteoroid_score_digits.txt  meteoroid_score_title.txt  platform.txt  player.txt  security_pistol.txt  slapamole_game_automaton.txt  spider_slime.txt  street_sign.txt  surgical_table.txt  unitaz.txt
res/world/: world
src/: 2d_vector_math.cpp  2d_vector_math.h  Action.h  ActionList.h  ActionStatus.h  Active.cpp  Active.h  Application.h  BaseRealmManager.h  Camera.cpp  Camera.h  Character.h  Component.h  ComponentList.h  Default.h  DefaultActionHandler.cpp  DefaultActionHandler.h  DefaultConstructor.cpp  DefaultConstructor.h  DefaultInputController.cpp  DefaultInputController.h  DefaultIntentionFlagCollection.h  DefaultRealmManager.cpp  DefaultRealmManager.h  DefaultWorld.h  Entity.cpp  Entity.h  EntityTypes.h  Events.h  GameAutomaton.h  Globals.h  Gun.cpp  Gun.h  GunObject.h  Platform.h  Player.cpp  Player.h  RSS_Grid.h  Renderer.cpp  Renderer.h  (+9 more)
src/components/: CameraComponent.h  CollideComponent.h  InputComponent.h  MassComponent.h  PlayerComponent.h  RealComponent.h  RotatableComponent.h  VisibleComponent.h
src/shaders/: fragment.frag  vertex.vert
src/system/: RenderSystem.cpp  RenderSystem.h
src/system/rendering/: ContextDetails.h  Device.cpp  Device.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  QueueFamilies.cpp  QueueFamilies.h  SwapChain.cpp  SwapChain.h  SwapChainSupportDetails.h  VulkanInstance.cpp  VulkanInstance.h  Window.cpp  Window.h  utils.cpp  utils.h
src/system/rendering/wrappers/: DebugMessangerWrapper.cpp  DebugMessangerWrapper.h  InstanceWrapper.cpp  InstanceWrapper.h  LogicalDeviceWrapper.cpp  LogicalDeviceWrapper.h  SurfaceWrapper.cpp  SurfaceWrapper.h  WindowWrapper.cpp  WindowWrapper.h
src/systems/: CameraSystem.cpp  CameraSystem.h  CollideSystem.cpp  CollideSystem.h  InputSystem.cpp  InputSystem.h  MassSystem.cpp  MassSystem.h  RenderSystem.cpp  RenderSystem.h
